--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,47 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Helvetica Neue', -apple-system, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.centrado {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  font-size: 3.1em;
+}
+
+h2 {
+  font-size: 2.1em;
+}
+
+h3 {
+  font-size: 1.7em;
+  font-weight: 400;
+}
+
+h4 {
+  font-size: 1.5em;
+  font-weight: 500;
+}
+
+.disabled {
+  pointer-events: none !important;
+  color: #666666 !important;
+  background: #cccccc !important;
+}
+
+input, button {
+  font-family: inherit !important;
 }
 
 code {
